2024 day07 part 2 refactor